# Dobi-SVD

./: LICENSE  README.md  evaluate.py  evaluate_speed.py  modelutils.py  pyproject.toml  readme.md  svd_trainer.py  weight_updater.py
modules/: IncrementalPCA.py  module.py  remapping.py  stable_svd.py
results/training_output/Llama-2-13b-hf/Diff-Remapping-0.4_wikitext2_2048/: best_gamma.json  k_dict_00068.json  k_dict_00136.json  k_dict_00204.json  k_dict_00272.json  k_dict_00340.json  k_dict_00408.json  k_dict_00476.json  k_dict_00544.json  k_dict_00612.json  k_dict_00680.json  k_dict_00748.json  k_dict_00816.json  k_dict_00884.json  k_dict_00952.json  k_dict_01020.json  k_dict_01088.json  k_dict_01156.json  k_dict_01224.json  k_dict_01292.json  k_dict_01360.json  para_config.json
results/training_output/Llama-2-13b-hf/Diff-Remapping-0.6_wikitext2_2048/: best_gamma.json  k_dict_00068.json  k_dict_00136.json  k_dict_00204.json  k_dict_00272.json  k_dict_00340.json  k_dict_00408.json  k_dict_00476.json  k_dict_00544.json  k_dict_00612.json  k_dict_00680.json  para_config.json
results/training_output/Llama-2-13b-hf/Diff-Remapping-0.8_wikitext2_2048/: best_gamma.json  k_dict_00136.json  k_dict_00272.json  k_dict_00408.json  k_dict_00544.json  k_dict_00680.json  k_dict_00816.json  k_dict_00952.json  k_dict_01088.json  k_dict_01224.json  k_dict_01360.json  k_dict_01496.json  k_dict_01632.json  k_dict_01768.json  k_dict_01904.json  para_config.json
results/training_output/Llama-2-7b-hf/Diff-Noremapping-0.4_wikitext2_2048/: best_gamma.json  (+18 more)
utils/: datautils.py
(+200 files in other folders)
